force-app/main/default/objects/MDG_Client_Mapping__mdt/MDG_Client_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>MDG Client Mapping</label>
    <pluralLabel>MDG Client Mapping</pluralLabel>
</CustomObject>