force-app/main/default/objects/MDG_Client_Mapping__mdt/fields/IsDelete__c.field-meta.xml
<CustomField>
    <fullName>IsDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsDelete</label>
    <type>Checkbox</type>
</CustomField>