force-app/main/default/objects/MDG_Client_Mapping__mdt/fields/MDG_Code__c.field-meta.xml
<CustomField>
    <fullName>MDG_Code__c</fullName>
    <description>MDG枚举值代码</description>
    <label>MDG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>