force-app/main/default/objects/MDG_Client_Mapping__mdt/fields/MDG_Description__c.field-meta.xml
<CustomField>
    <fullName>MDG_Description__c</fullName>
    <description>MDG枚举值中文描述</description>
    <label>MDG Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>