force-app/main/default/objects/MDG_Client_Mapping__mdt/fields/MDG_SFDC_Name__c.field-meta.xml
<CustomField>
    <fullName>MDG_SFDC_Name__c</fullName>
    <description>MDG枚举值在Salesforce中对应的API名</description>
    <label>MDG SFDC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>