force-app/main/default/objects/MDG_Client_Mapping__mdt/fields/MDG_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>MDG_Sub_Code__c</fullName>
    <description>MDG枚举值二级Code</description>
    <label>MDG Sub Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>