force-app/main/default/objects/MDG_Client_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>MDG_Code__c</columns>
    <columns>MDG_Sub_Code__c</columns>
    <columns>MDG_SFDC_Name__c</columns>
    <columns>MDG_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>